# manager-chan

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/manager_chan_notes/: __init__.py  art.py  constants.py  data_models.py  logic.py  main.py  settings.py  tui.py
